[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Sergii Mikhtoniuk <mikhtoniuk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = { version = "*", features = ["http2", "protocol-ftp", "static-curl", "static-ssl"] }
curl-sys = "*"
